[package]
name = "rosu-pp"
version = "1.1.0"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-pp"
documentation = "https://docs.rs/rosu-pp/"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = ["compact_strains"]
compact_strains = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
# rosu-map = { version = "0.1.2" }
rosu-map = { git = "https://github.com/MaxOhn/rosu-map", branch = "pp-update" }
# rosu-mods = { version = "0.1.0" }
rosu-mods = { path = "../rosu-mods" }

[dev-dependencies]
proptest = "1.4.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3