[package]
name = "pp-plot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { version = "0.15", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
plotters = { version = "0.3" }
rosu-pp = { path = "..", features = ["async_tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", default-features = false, features = ["fs", "rt-multi-thread"] }